--- a/core/build.gradle
+++ b/core/build.gradle
@@ -10,5 +10,5 @@ eclipse.project {
     name = appName + "-core"
 }
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-reflect:1.2.71"
+    compile 'org.jetbrains.kotlin:kotlin-reflect:1.2.71'
 }
